[gd_scene load_steps=4 format=3 uid="uid://cb7ihhftelvqo"]

[ext_resource type="Script" uid="uid://bqsa8x54qss74" path="res://Scripts/import_sentences.gd" id="1_ktrd0"]
[ext_resource type="StyleBox" uid="uid://brx00us83uw3f" path="res://Styles/panel.tres" id="1_phl48"]
[ext_resource type="Theme" uid="uid://be1vcvc77rvdh" path="res://Styles/font_theme.tres" id="2_0j0ds"]

[node name="Import Sentences" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ktrd0")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.152778
anchor_top = 0.0949074
anchor_right = 0.847222
anchor_bottom = 0.905093
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_phl48")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Top Row" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Top Row"]
layout_mode = 2
alignment = 1

[node name="DeckName" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/Top Row/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Deck Name..."

[node name="Gap" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Top Row/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.7

[node name="Next" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Top Row/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Instructions" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_0j0ds")
theme_override_constants/line_separation = 2
theme_override_font_sizes/italics_font_size = 13
theme_override_font_sizes/bold_font_size = 14
bbcode_enabled = true
text = "To add additional sentences to study, you need to add them in the following format:
[indent][i]Native sentence here.
Translated sentence here.
*Repeat with no gap*[/i][/indent]"

[node name="Margins Data Entry" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.1

[node name="VBox Data Entry" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Margins Data Entry"]
layout_mode = 2

[node name="Text Box" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Margins Data Entry/VBox Data Entry"]
layout_mode = 2
size_flags_vertical = 3

[node name="Enter data" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/Margins Data Entry/VBox Data Entry/Text Box"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Enter sentence data here:"

[node name="LeftSide" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Margins Data Entry/VBox Data Entry/Text Box"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Complete" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/Margins Data Entry/VBox Data Entry/Text Box/LeftSide"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Completed sentences:"

[node name="Total" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/Margins Data Entry/VBox Data Entry/Text Box/LeftSide"]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "0 items"

[node name="Sentence Box" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Margins Data Entry/VBox Data Entry"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.25
alignment = 1

[node name="TextInput" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/Margins Data Entry/VBox Data Entry/Sentence Box"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "..."

[node name="CompleteSentences" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer/Margins Data Entry/VBox Data Entry/Sentence Box"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Convert Box" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Margins Data Entry/VBox Data Entry"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Convert" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Margins Data Entry/VBox Data Entry/Convert Box"]
layout_mode = 2
size_flags_horizontal = 3
text = "Convert"

[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Top Row/HBoxContainer/Next" to="." method="_on_next_button_down"]
[connection signal="item_clicked" from="PanelContainer/MarginContainer/VBoxContainer/Margins Data Entry/VBox Data Entry/Sentence Box/CompleteSentences" to="." method="_on_complete_sentences_item_clicked"]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Margins Data Entry/VBox Data Entry/Convert Box/Convert" to="." method="_on_convert_button_down"]
